<resources>

    <!-- APP -->
    <string name="app_name">Rotllan</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- Menu -->
    <string name="action_settings">Settings</string>

    <!-- Navigation Drawer -->
    <string name="pestana_uno">Restaurantes</string>
    <string name="titulo1">Productos</string>
    <string name="sin_denominacion_origen">Sin denominación de origen</string>
    <string name="pestana_dos">D.O</string>
    <string name="pestana_tres">Rioja</string>
    <string name="pestana_cuatro">Rias baixas</string>
    <string name="pestana_cinco">Cava</string>
    <string name="pestana_seis">Cataluña</string>
    <string name="varios">Varios</string>
    <string name="comunicacion">Comunicación</string>
    <string name="contacto">Contacto</string>

    <!-- Tabbed Activity -->
    <string name="section_format">Hello World from section: %1$d</string>

    <!--Nombre de las activities -->
    <string name="title_activity_priorat">Priorat</string>
    <string name="title_activity_rioja">Rioja</string>
    <string name="title_activity_cava">Cava</string>
    <string name="title_activity_catalunya">Catalunya</string>
    <string name="title_activity_contacto">Contacto</string>
    <string name="title_activity_varios">Varios</string>

    <!-- Contacto Activity -->
    <string name="nombre_jordi">Jordi Rotllan Torra</string>
    <string name="cargo">Rotllan Torra SL</string>
    <string name="telefono">Teléfono: </string>
    <string name="numero_telefono">+34 93 313 43 47</string>
    <string name="web">Web: </string>
    <string name="pagina_web">www.ovinea.com</string>


    <!--           PRIORAT              -->
    <string-array name="array_nombre_priorats">
        <item>Mistik Crianza</item>
        <item>Mistik Reserva</item>
    </string-array>

    <string-array name="array_anada_priorats">
        <item>2012</item>
        <item>2010</item>
    </string-array>

    <string-array name="array_coupatge_priorats">
        <item>45% Garnacha\n45% Mazuelo\n10% Cabernet Sauvignon
        </item>
        <item>45% Garnacha\n45% Mazuelo\n10% Cabernet Sauvignon</item>
    </string-array>

    <string-array name="array_graualco_priorats">
        <item>13,5% vol.</item>
        <item>13,5% vol.</item>
    </string-array>

    <string-array name="array_descripcion_priorats">
        <item>Mistik es un vino elaborado a mano desde el primer momento del proceso. Es un vino de mucha calidad, al tener una excelente relación calidad precio hace que su rotación sea muy alta.\nAsí pues se pueden adquirir a precios muy competitivos.\nNo son vinos que se queden en lo lineal.\nVisualmente son muy atractivos y llaman la atención del consumidor</item>
        <item>Mistik es un vino elaborado a mano desde el primer momento del proceso. Es un vino de mucha calidad, al tener una excelente relación calidad precio hace que su rotación sea muy alta.\nAsí pues se pueden adquirir a precios muy competitivos.\nNo son vinos que se queden en lo lineal.\nVisualmente son muy atractivos y llaman la atención del consumidor</item>
    </string-array>

    <!--           RIOJA              -->
    <string-array name="array_nombre_rioja">
        <item>Aribau Cuvée Crianza</item>
        <item>Aribau Cuvée Reserva</item>
    </string-array>

    <string-array name="array_anada_rioja">
        <item>2013</item>
        <item>2010</item>
    </string-array>

    <string-array name="array_coupatge_rioja">
        <item>85% Tempranillo\n10% Mazuelo\n5% Mazuelo</item>
        <item>85% Tempranillo\n10% Mazuelo\n5% Mazuelo</item>
    </string-array>

    <string-array name="array_graualco_rioja">
        <item>13,5% vol.</item>
        <item>13,5% vol.</item>
    </string-array>

    <string-array name="array_descripcion_rioja">
        <item>Bello color picota intenso con el ribete de un ligero color teja y de buena intensidad, aromas de fruta roja, mentolados, cacao, minerales y maderas aromáticas. Potente y amplio muy bien estructurado, aromático y fresco. Su bouquet revela notas de frutas negras y especias dulces que se mezclan con una fina madera. En boca es carnoso, muy persistente en boca, resaltando la elegancia y finura de este gran vino. Tiene una vía retronasal larga. Tiene una larga vida.</item>
        <item>Bello color picota intenso con el ribete de un ligero color teja y de buena intensidad, aromas de fruta roja, mentolados, cacao, minerales y maderas aromáticas. Potente y amplio muy bien estructurado, aromático y fresco. Su bouquet revela notas de frutas negras y especias dulces que se mezclan con una fina madera. En boca es carnoso, muy persistente en boca, resaltando la elegancia y finura de este gran vino. Tiene una vía retronasal larga. Tiene una larga vida.</item>
    </string-array>

    <!--           CATALUNYA              -->
    <string-array name="array_nombre_catalunya">
        <item>Ressó Tinto</item>
        <item>Ressó Blanco</item>
    </string-array>

    <string-array name="array_anada_catalunya">
        <item>Seco</item>
        <item>Seco</item>
    </string-array>

    <string-array name="array_coupatge_catalunya">
        <item>80% Garnacha\n20% Tempranillo\n5% Mazuelo</item>
        <item>100% Garnacha blanca</item>
    </string-array>

    <string-array name="array_graualco_catalunya">
        <item>14% vol.</item>
        <item>13,5% vol.</item>
    </string-array>

    <string-array name="array_descripcion_catalunya">
        <item>Tiene una entrada muy suave, fresco y mineral. Claro y persistente. Apropiado para todas las carnes blancas y rojas. Ideal para platos con arroz, las carnes rojas y los semi curados o quesos curados.</item>
        <item>Tiene una entrada muy suave, fresco y mineral. Claro y persistente. Apropiado para todas las carnes blancas y rojas. Ideal para platos con arroz, las carnes rojas y los semi curados o quesos curados.</item>
    </string-array>

    <!--           CAVAS              -->
    <string-array name="array_nombre_cavas">
        <item>Gran Palas</item>
        <item>Gran Palas</item>
    </string-array>

    <string-array name="array_anada_cavas">
        <item>Brut</item>
        <item>Brut Nature</item>
    </string-array>

    <string-array name="array_coupatge_cavas">
        <item>30% Macabeo\n30% Xarel·lo\n40% Parellada</item>
        <item>30% Macabeo\n30% Xarel·lo\n40% Parellada</item>
    </string-array>

    <string-array name="array_graualco_cavas">
        <item>11,5% vol.</item>
        <item>11,5% vol.</item>
    </string-array>

    <string-array name="array_cosecha_cavas">
        <item></item>
        <item></item>
    </string-array>

    <string-array name="array_primera_fermentacion">
        <item></item>
        <item></item>
    </string-array>

    <string-array name="array_segunda_fermentacion">
        <item></item>
        <item></item>
    </string-array>

    <string-array name="array_color_cavas">
        <item>Amarillo pálido con tonos dorados. Limpio y brillante.</item>
        <item>Amarillo paja con tonos dorados. Burbuja fina y abundante, con desprendimiento vertical y la corona bien formada</item>
    </string-array>

    <string-array name="array_aroma_cavas">
        <item>Limpio con fuerza media en nariz. Elegante y afrutado.</item>
        <item>Agradable. Afrutado, con sensación de una larga crianza en botella</item>
    </string-array>

    <string-array name="array_sabor_cavas">
        <item>Buen balance en boca. Sabroso, con dulzura apropiada, muy suave y fresco. Excelente persistencia en perdida de burbujas.</item>
        <item>Muy agradabble y seco. Delicado en boca, largo acabado limpio.</item>
    </string-array>

    <string-array name="array_como_cavas">
        <item>Debe servirse frio a una temperatura entre 5°C y 6ºC. Se recomienda el tipo de copa flauta.</item>
        <item>Debe servirse frio, nunca congelado, a una temperatura entre 5°C y 6ºC. Se recomienda el tipo de copa flauta.</item>
    </string-array>

    <string-array name="array_cuando_cavas">
        <item>Muy agradable como aperitivo. Especialmente adecuado con carne blanca y pescado.</item>
        <item>En comidas. Ideal para todo tipo de carne y pescado</item>
    </string-array>

    <!--           VARIOS              -->
    <string-array name="array_nombre_varios">
        <item>Musicato Sweet </item>
        <item></item>
    </string-array>

    <string-array name="array_anada_varios">
        <item>Muscat</item>
        <item></item>
    </string-array>

    <string-array name="array_coupatge_varios">
        <item>33% Macabeo\n33% Xarel·lo\n33% Parellada</item>
        <item></item>
    </string-array>

    <string-array name="array_graualco_varios">
        <item>6,5% vol.</item>
        <item></item>
    </string-array>

    <string-array name="array_elaboracion_varios">
        <item>Gracias a las mejores uvas del Penedés, la utilización únicamente de mosto flor, y una cuidada elaboración, obtenemos esta sofisticada bebida y refrescante bebida. Una vez obtenido el vino después de una primera fermentación, se inicia el proceso de toma de espuma, que nace de la fermentación natural en depósitos isobáricos, que nos permiten conseguir una presión final cercana a las 5 Atm. Las correcciones del licor de expedición, nos permiten presentar una bebida fresca, moderna y equilibrada.</item>
        <item></item>
    </string-array>

    <string-array name="array_caracteristicas_varios">
        <item>Este novedoso producto destaca porsus particularidades; bajo grado alcohólico, infusionado con esencias para darle un excelente aroma, un contenido alto en azúcar en perfecta armonía con su acidez y una imagen moderna, la convierten en una experiencia única e inolvidable.</item>
        <item></item>
    </string-array>

    <string name="coupage">Coupage</string>
    <string name="graduacion">Graduación</string>
    <string name="cosecha">Cosecha</string>
    <string name="color">Color</string>
    <string name="aroma">Aroma</string>
    <string name="sabor">Sabor</string>
    <string name="caracteristicas">Caracteristicas</string>
    <string name="elaboracion">Elaboración</string>
    <string name="comoServir">Como servir</string>
    <string name="cuandoServir">Cuando servir</string>
    <string name="title_activity_restaurantes">Map</string>
    <string name="title_activity_denominaciones">Denominaciones</string>

</resources>
