<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_todos"
            android:icon="@drawable/iconorestaurantes"
            android:title="@string/pestana_uno" />
    </group>

    <group android:checkableBehavior="single">
        <item android:title="@string/titulo1">
            <menu>
                <item
                    android:id="@+id/nav_DO"
                    android:icon="@drawable/iconodeno"
                    android:title="@string/pestana_dos" />
                <item
                    android:id="@+id/nav_noDO"
                    android:icon="@drawable/icononodeno"
                    android:title="@string/pestana_tres" />
            </menu>
        </item>
    </group>

    <group android:checkableBehavior="single">
    <item android:title="@string/titulo2">
        <menu>
            <item
                android:id="@+id/nav_noticias"
                android:icon="@drawable/newspaper"
                android:title="@string/pestana_cuatro" />
        </menu>
    </item>
    </group>

    <group android:checkableBehavior="single">
        <item android:title="@string/titulo3">
            <menu>
                <item
                    android:id="@+id/nav_contacto"
                    android:icon="@drawable/ic_menu_share"
                    android:title="@string/pestana_cinco" />
            </menu>
        </item>
    </group>

</menu>
