<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.project.mistik.ContactActivity"
    tools:showIn="@layout/activity_contacto">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/card_margin">

        <LinearLayout
            style="@style/Widget.CardContent"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/thumbnail"
                android:layout_width="@dimen/list_item_article_thumbnail"
                android:layout_marginStart="16dp"
                android:layout_height="@dimen/list_item_article_thumbnail"
                android:scaleType="centerCrop"
                android:src="@drawable/jordiportrait" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/list_item_artile_vertical_margin"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="@dimen/list_item_artile_vertical_margin"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/ceoName"
                    style="style/TextAppearance.Medium"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-condensed"
                    android:lineSpacingMultiplier="0.85"
                    android:paddingBottom="4dp"
                    android:singleLine="true"
                    android:maxLines="1"
                    android:ellipsize="end"
                    android:textStyle="bold"
                    android:text="@string/nombre_jordi"
                    android:paddingStart="16dp" />

                <TextView
                    android:id="@+id/article_subtitle"
                    style="style/TextAppearance.Small"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:text="@string/cargo"
                    android:paddingStart="16dp"
                    android:paddingTop="5dp" />
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/cardTlf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/card_margin"
        android:layout_marginRight="@dimen/card_margin">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/card_margin"
            android:paddingBottom="@dimen/card_margin"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textTlf"
                style="style/TextAppearance.Small"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="1"
                android:singleLine="true"
                android:text="@string/telefono"
                android:paddingStart="16dp"
                android:paddingTop="5dp" />

            <TextView
                android:id="@+id/telephone"
                style="style/TextAppearance.Medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:lineSpacingMultiplier="0.85"
                android:paddingBottom="4dp"
                android:singleLine="true"
                android:maxLines="1"
                android:ellipsize="end"
                android:textStyle="bold"
                android:text="@string/numero_telefono"
                android:paddingStart="16dp" />

        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/cardWeb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/card_margin"
        android:layout_marginRight="@dimen/card_margin">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/card_margin"
            android:paddingBottom="@dimen/card_margin"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textWeb"
                style="style/TextAppearance.Small"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="1"
                android:singleLine="true"
                android:text="@string/web"
                android:paddingStart="16dp" />

            <TextView
                android:id="@+id/web"
                style="style/TextAppearance.Medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:lineSpacingMultiplier="0.85"
                android:paddingBottom="4dp"
                android:singleLine="true"
                android:maxLines="1"
                android:ellipsize="end"
                android:textStyle="bold"
                android:text="@string/pagina_web"
                android:paddingStart="43dp" />

        </LinearLayout>
    </android.support.v7.widget.CardView>


    <android.support.v7.widget.CardView
        android:id="@+id/cardMap"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginLeft="@dimen/card_margin"
        android:layout_marginRight="@dimen/card_margin">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/card_margin"
            android:paddingBottom="@dimen/card_margin"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/mapa_google"
                android:src="@drawable/mapagoogle" />

        </LinearLayout>
    </android.support.v7.widget.CardView>


</LinearLayout>

