<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView01"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.project.rotllan.VariosActivity$PlaceholderFragment">


        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/card_margin">

            <LinearLayout
                style="@style/Widget.CardContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/fotoVarios"
                        android:layout_width="100dp"
                        android:layout_height="150dp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/nombreVarios"
                                style="@style/Base.TextAppearance.AppCompat.Headline"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:ellipsize="end"
                                android:fontFamily="sans-serif-condensed"
                                android:lineSpacingMultiplier="0.85"
                                android:maxLines="1"
                                android:paddingBottom="4dp"
                                android:paddingStart="8dp"
                                android:singleLine="true"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/anoVarios"
                                style="@style/Base.TextAppearance.AppCompat.Body1"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:ellipsize="end"
                                android:maxLines="1"
                                android:paddingStart="16dp"
                                android:singleLine="true" />

                        </LinearLayout>

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_marginBottom="5dp"
                            android:background="@android:color/black" />

                        <TextView
                            android:id="@+id/coupage"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingStart="8dp"
                            android:text="@string/coupage"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/coupatgeVarios"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:lines="3"
                            android:paddingStart="8dp" />

                        <TextView
                            android:id="@+id/grados"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingStart="8dp"
                            android:text="@string/graduacion"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/gradosVarios"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingStart="8dp" />


                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/card_margin">

            <LinearLayout
                style="@style/Widget.CardContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/list_item_artile_vertical_margin"
                android:layout_marginTop="@dimen/list_item_artile_vertical_margin"
                android:orientation="vertical">

                    <TextView
                        android:textStyle="bold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingStart="16dp"
                        android:text="@string/elaboracion"
                        android:layout_gravity="center" />

                    <TextView
                        android:id="@+id/elaboracionVarios"
                        style="@style/Base.TextAppearance.AppCompat.Body1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingBottom="4dp"
                        android:paddingStart="16dp" />

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/card_margin">

            <LinearLayout
                style="@style/Widget.CardContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/list_item_artile_vertical_margin"
                android:layout_marginTop="@dimen/list_item_artile_vertical_margin"
                android:orientation="vertical">

                    <TextView
                        android:textStyle="bold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingStart="16dp"
                        android:text="@string/caracteristicas"
                        android:layout_gravity="center" />

                    <TextView
                        android:id="@+id/descripcionVarios"
                        style="@style/Base.TextAppearance.AppCompat.Body1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingBottom="4dp"
                        android:paddingStart="16dp" />

            </LinearLayout>

        </android.support.v7.widget.CardView>

    </LinearLayout>

</ScrollView>
